# BlogFull

./: pyproject.toml
backend/BlogBackend/BlogBackend/: asgi.py  settings.py  urls.py  wsgi.py
backend/BlogBackend/main/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/BlogBackend/main/migrations/: 0001_initial.py
backend/BlogBackend/main/tests/: test_models.py  test_urls.py  test_views.py
frontend/blog_frontend/: README.md  package-lock.json  package.json
frontend/blog_frontend/src/: App.vue  main.js
frontend/blog_frontend/src/components/: AllArticle.vue  Registration.vue  SignIn.vue
frontend/frontend/: package-lock.json  package.json
frontend/frontend/public/: index.html
frontend/frontend/src/: App.vue  main.js
frontend/frontend/src/components/: SignIn.vue
frontend/frontend/src/router/: index.js
frontend/frontend/src/store/: auth.js  index.js  subscribe.js
frontend/frontend/src/views/: Article.vue  Edit.vue  EditPage.vue  FavoriteArticle.vue  Home.vue  Registration.vue  SignIn.vue
